--- a/reviewSunday/styles.css
+++ b/reviewSunday/styles.css
@@ -2,3 +2,15 @@
 	color: red;
 	font-weight: bold;
 }
+
+.active {
+	font-weight: bold;
+	border-width: 2px;
+	border-style: solid;
+}
+.correct.active {
+	color: green;
+}
+.incorrect.active {
+	color: red;
+}
